--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 aniso8601==1.1.0
+Babel==2.3.4
 click==6.6
 dominate==2.2.0
 Flask==0.11
+Flask-Babel==0.11.1
 Flask-PyMongo==0.4.1
 Flask-RESTful==0.3.5
 itsdangerous==0.24
